NATTQA-ENV/force-app/main/default/objects/NATT_B2B_Shipping_Option__c/NATT_B2B_Shipping_Option__c.object-meta.xml
<CustomObject>
    <label>B2B Shipping Option</label>
    <nameField>
        <label>B2B Shipping Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Shipping Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>