NATTQA-ENV/force-app/main/default/objects/NATT_B2B_Shipping_Option__c/fields/NATT_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Order_Type</valueSetName>
    </valueSet>
</CustomField>