NATTQA-ENV/force-app/main/default/objects/NATT_B2B_Shipping_Option__c/fields/NATT_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Shipment_Method</valueSetName>
    </valueSet>
</CustomField>