NATTQA-ENV/force-app/main/default/objects/NATT_B2B_Shipping_Option__c/fields/NATT_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>