NATTQA-ENV/force-app/main/default/objects/NATT_B2B_Shipping_Option__c/recordTypes/NATT_Shipment.recordType-meta.xml
<RecordType>
    <fullName>NATT_Shipment</fullName>
    <active>true</active>
    <label>NATT Shipment</label>
</RecordType>